# sfml

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
sfml/: CMakeLists.txt  Game.h  sfml.cpp  sfml.h
sfml/Lib/: CMakeLists.txt  Game.cpp
